图片路径修改

--- a/_posts/posts/2023-06-18-future.md
+++ b/_posts/posts/2023-06-18-future.md
@@ -3,7 +3,7 @@ layout: post
 title: "暑期规划"
 date: 2023-06-24 12:09:33
 category: diary
-img: images/post/小孤独.png
+img: images/post/future/小孤独.png
 published: true
 comments: true
 ---
