--- a/_posts/posts/2023-06-18-moodland.md
+++ b/_posts/posts/2023-06-18-moodland.md
@@ -3,7 +3,7 @@ layout: post
 title: "栖地演示视频"
 date: 2023-06-24 12:09:33
 category: diary
-img: images/post/future/栖地.png
+# img: images/post/moodland/栖地.png
 published: true
 comments: true
 ---
