修改视频尺寸

--- a/_posts/posts/2023-01-26-sketch.md
+++ b/_posts/posts/2023-01-26-sketch.md
@@ -11,5 +11,5 @@ comments: true
 PC端演示视频
  <video class="video" src="../../videos/sketch_PC.mp4" controls></video>
 移动端演示视频
- <video class="video" src="../../videos/sketch_mobile.mp4" controls></video>
+ <video style="width:50%;height:auto" class="video" src="../../videos/sketch_mobile.mp4" controls></video>
 
