--- a/_posts/posts/2023-06-18-moodland.md
+++ b/_posts/posts/2023-06-18-moodland.md
@@ -8,7 +8,6 @@ published: true
 comments: true
 ---
 <!-- more -->
- <video style="width:60%;height:60%"class="video" src="../../videos/栖地compressed.mp4" controls></video>
-
+ <video style="width:60%;height:60%;margin:auto 0" class="video" src="../../videos/栖地compressed.mp4" controls></video>
 
 
