--- a/_posts/posts/2023-06-18-moodland.md
+++ b/_posts/posts/2023-06-18-moodland.md
@@ -12,5 +12,10 @@ comments: true
 [![Rendering](../../images/post/moodland/moodland12.png)](../../images/post/moodland/moodland12.png){:target="_blank"}
 [![Rendering](../../images/post/moodland/moodland13.png)](../../images/post/moodland/moodland13.png){:target="_blank"}
 [![Rendering](../../images/post/moodland/moodland14.png)](../../images/post/moodland/moodland14.png){:target="_blank"}
+<style>
+    body{
+        background:black;
+    }
+</style>
  <!-- <video style="width:60%;height:60%;margin:auto 50%;transform:translateX(-50%)" class="video" src="../../videos/栖地compressed.mp4" controls></video> -->
 
