--- a/_posts/posts/2023-06-18-moodland.md
+++ b/_posts/posts/2023-06-18-moodland.md
@@ -7,26 +7,12 @@ category: diary
 published: true
 comments: true
 ---
-
 <!-- more -->
-
-内容展示
-[![Rendering](../../images/post/moodland/moodland12.png)](../../images/post/moodland/moodland12.png){:target="\_blank"}
+简要页面展示
 <div class="title" style="">个人页</div>
-[![Rendering](../../images/post/moodland/moodland13.png )](../../images/post/moodland/moodland13.png){:target="_blank"}
+[![Rendering](../../images/post/moodland/moodland12.png)](../../images/post/moodland/moodland12.png){:target="\_blank"}
 <div class="title" style="">探索页</div>
-[![Rendering](../../images/post/moodland/moodland14.png)](../../images/post/moodland/moodland14.png){:target="_blank"}
+[![Rendering](../../images/post/moodland/moodland13.png )](../../images/post/moodland/moodland13.png){:target="_blank"}
 <div class="title" style="">其它页</div>
-<style>
-    img{
-        border-radius: 0.3125em;
-        box-shadow: 0 2px 4px 0 rgba(34,36,38,.12),0 2px 10px 0 rgba(34,36,38,.08);
-    }
-    .title{
-        color:orange; border-bottom: 1px solid #d9d9d9;
-        display: inline-block;
-        color: #999;
-        padding: 2px;
-    }
-</style>
+[![Rendering](../../images/post/moodland/moodland14.png)](../../images/post/moodland/moodland14.png){:target="_blank"}
  <!-- <video style="width:60%;height:60%;margin:auto 50%;transform:translateX(-50%)" class="video" src="../../videos/栖地compressed.mp4" controls></video> -->
